# tinyhttp

./: .dockerignore  .gitignore  .gitmodules  Aptfile  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  build.sh  buildpack-run.sh  config.lua  default_11031560523854897548_0_24112.profraw  default_11031560523854897548_0_47408.profraw  default_11675857939069492335_0_47336.profraw  default_14444385554745024821_0_24112.profraw  default_14444385554745024821_0_47408.profraw  default_4946097959183109946_0_47408.profraw  fly.toml  main.zip.1  perf.data.old  profile.json  tore .
.github/: ranger.yml
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs
tinyhttp/: Cargo.toml  README.md
tinyhttp-codegen/: .travis.yml  Cargo.toml
tinyhttp-codegen/src/: .lib.rs.rustfmt  lib.rs  route.rs
tinyhttp-heroku-html-main/: index.html  style.css
tinyhttp-internal/: .gitlab-ci.yml  Cargo.toml  nvim.ses
tinyhttp-internal/src/: .http.rs.rustfmt  async_http.rs  config.rs  headers.rs  http.rs  http2.rs  lib.rs  lru_cache.rs  middleware.rs  request.rs  response.rs
tinyhttp-internal/src/codegen/: route.rs
tinyhttp-internal/src/http2/: connection.rs  frame.rs  http2_frame.rs  mod.rs  server.rs
tinyhttp-internal/src/thread_pool/: mod.rs
tinyhttp/benches/: create_req.rs  parse_html_req.rs  parse_html_v1.rs
tinyhttp/examples/: async.rs  example.rs  heroku-deploy.rs  http2.rs  local_server.rs
tinyhttp/src/: lib.rs
