[package]
authors = ["Mateo Cabanal <mateo200525@gmail.com>"]
description = "Internal data types for tinyhttp"
edition = "2021"
keywords = ["http", "server"]
license = "GPL-2.0-or-later"
name = "tinyhttp-internal"
repository = "https://github.com/mateocabanal/tinyhttp-internal"
version = "0.4.0-rc1"

[dependencies]
mime_guess = "2.0.4"
openssl = { version = "0.10", optional = true }
dyn-clone = "1.0.11"
infer = "0.15.0"
num_cpus = "1.16.0"
rusty_pool = "0.7.0"
thiserror = "1"


#async-std = { version = "1.12.0", features = ["attributes"], optional = true }
#futures = { version = "0.3.21", features = ["thread-pool"], optional = true }

[dependencies.flate2]
features = ["miniz-sys"]
version = "1"
optional = true

[dependencies.log]
features = ["std"]
version = "0.4"
optional = true

[features]
default = ["sys", "log"]
openssl_vendor = ["ssl", "openssl?/vendored"]
#async = ["dep:async-std", "dep:futures"]
ssl = ["dep:openssl"]
sys = ["ssl", "dep:flate2"]
log = ["dep:log"]
