[package]
authors = ["Mateo Cabanal <mateo200525@gmail.com>"]
description = "Internal data types for tinyhttp"
edition = "2021"
keywords = ["http", "server"]
license = "GPL-2.0-or-later"
name = "tinyhttp-internal"
repository = "https://github.com/mateocabanal/tinyhttp-internal"
version = "0.5.0"

[dependencies]
mime_guess = "2.0.4"
openssl = { version = "0.10", optional = true }
dyn-clone = "1.0.11"
infer = "0.15.0"
num_cpus = "1.16.0"
rusty_pool = "0.7.0"
thiserror = "1"

[dependencies.flate2]
features = ["miniz-sys"]
version = "1"
optional = true

[dependencies.log]
features = ["std"]
version = "0.4"
optional = true

[dependencies.tokio]
features = ["rt-multi-thread", "io-util", "net", "macros", "fs"]
version = "1.3"
optional = true

[features]
default = ["sys", "log"]
openssl_vendor = ["ssl", "openssl?/vendored"]
middleware = []
async = ["dep:tokio"]
ssl = ["dep:openssl"]
sys = ["ssl", "dep:flate2"]
log = ["dep:log"]

[dev-dependencies]
criterion = "0.5.1"
