[package]
name = "tinyhttp"
version = "0.3.0"
edition = "2021"
authors = ["Mateo Cabanal <mateo200525@gmail.com>"]
license = "GPL-2.0-or-later"
keywords = ["http", "server"]
description = "A HTTP library with SSL and GZIP support"
repository = "https://github.com/mateocabanal/tinyhttp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
log = "0.4.17"

[[bench]]
name = "create_req"
harness = false

[dependencies]
tinyhttp-internal = { path = "../tinyhttp-internal", version = "0.3.0", default-features = false }
tinyhttp-codegen = { path = "../tinyhttp-codegen", version = "0.3.0" }

[features]
default = ["ssl", "sys", "log", "http2"]
#async = ["tinyhttp-internal/async"]
openssl_vendor = ["tinyhttp-internal/openssl_vendor"]
http2 = ["tinyhttp-internal/http2"]
ssl = ["tinyhttp-internal/ssl"]
sys = ["tinyhttp-internal/sys"]
log = ["tinyhttp-internal/log"]
