[package]
name = "tinyhttp"
version = "0.3.6"
edition = "2021"
authors = ["Mateo Cabanal <mateo200525@gmail.com>"]
license = "GPL-2.0-or-later"
keywords = ["http", "server"]
description = "A HTTP library with SSL and GZIP support"
repository = "https://github.com/mateocabanal/tinyhttp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
simple_logger = "4.0.0"
log = "0.4.17"

[[bench]]
name = "create_req"
harness = false

[dependencies]
tinyhttp-internal = { path = "../tinyhttp-internal", version = "0.3.6", default-features = false }
tinyhttp-codegen = { path = "../tinyhttp-codegen", version = "0.3.6" }

[features]
default = ["ssl", "sys", "log"]
#async = ["tinyhttp-internal/async"]
openssl_vendor = ["tinyhttp-internal/openssl_vendor"]
ssl = ["tinyhttp-internal/ssl"]
sys = ["tinyhttp-internal/sys"]
log = ["tinyhttp-internal/log"]
