[package]
name = "tinyhttp"
version = "0.4.0-rc3"
edition = "2021"
authors = ["Mateo Cabanal <mateo200525@gmail.com>"]
license = "GPL-2.0-or-later"
keywords = ["http", "server"]
description = "A HTTP library with SSL and GZIP support"
repository = "https://github.com/mateocabanal/tinyhttp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
simple_logger = "4.0.0"
log = "0.4.17"
minreq = "2.8.1" 
tokio = { version = "1.30", features = ["macros", "rt-multi-thread", "net"] }

[[bench]]
name = "create_req"
harness = false

[[example]]
name = "async"
required-features = ["async"]

[dependencies]
tinyhttp-internal = { path = "../tinyhttp-internal", version = "0.4.0-rc3", default-features = false, features = ["sys"] }
tinyhttp-codegen = { path = "../tinyhttp-codegen", version = "0.4.0-rc3" }

[features]
default = ["ssl", "sys", "log"]
async = ["tinyhttp-internal/async"]
middleware = ["tinyhttp-internal/middleware"]
openssl_vendor = ["tinyhttp-internal/openssl_vendor"]
ssl = ["tinyhttp-internal/ssl"]
sys = ["tinyhttp-internal/sys"]
log = ["tinyhttp-internal/log"]
